syntax = "proto3";
package clusterpb;

option go_package = ".;clusterpb";

message DictionaryItem{
    string route = 1;
    uint32 code = 2;
    string type = 3;
};

message MemberInfo {
    string label = 1;
    string serviceAddr = 2;
    repeated string services = 3;
    repeated DictionaryItem dictionary = 4;
}

message RegisterRequest {
    MemberInfo memberInfo = 1;
}

message RegisterResponse {
    repeated MemberInfo members = 1;
}

message UnregisterRequest {
    string serviceAddr = 1;
}

message UnregisterResponse {}

service Master {
    rpc Register (RegisterRequest) returns (RegisterResponse) {}
    rpc Unregister (UnregisterRequest) returns (UnregisterResponse) {}
}

message RequestMessage {
    string gateAddr = 1;
    int64 sessionID = 2;
    uint64 ID = 3;
    string route = 4;
    bytes data = 5;
}

message NotifyMessage {
    string gateAddr = 1;
    int64 sessionID = 2;
    uint64 ID = 3;
    string route = 4;
    bytes data = 5;
}

message ResponseMessage {
    int64 sessionID = 1;
    uint64 ID = 2;
    string route = 3;
    bytes data = 4;
}

message PushMessage {
    int64 sessionID = 1;
    string route = 2;
    bytes data = 3;
}

message MemberHandleResponse {}

message NewMemberRequest {
    MemberInfo memberInfo = 1;
}

message NewMemberResponse {}

message DelMemberRequest {
    string serviceAddr = 1;
}

message DelMemberResponse {}

message SessionClosedRequest {
    int64 sessionID = 1;
}

message SessionClosedResponse {}

message CloseSessionRequest {
    int64 sessionID = 1;
}

message CloseSessionResponse {}

message PipeInfo {
    string Label = 1;
    string Addr = 2;
    StatisticItem Item = 3;
    repeated RouteStatistic RouteItems = 4;
    repeated TypeStatistic TypeItems = 5;
}

message StatisticItem {
    int64 ReqCount = 1;//请求数
    int64 TotalBytes = 2;//总字节数
    double BytesPerReq = 3;//平均一个请求字节数
    int64 TotalProcessTime = 4;//总处理时间
    double AvgProcessTime = 5;//平均处理时间
}

message RouteStatistic {
    string Route = 1;
    StatisticItem item = 2;
}

message TypeStatistic {
    int64 Type = 1;
    StatisticItem item = 2;
}

message QueryStatsRequest {}

message QueryStatsResponse {
    PipeInfo PipeInfo = 1;
}

service Member {
    rpc HandleRequest (RequestMessage) returns (MemberHandleResponse) {}
    rpc HandleNotify (NotifyMessage) returns (MemberHandleResponse) {}
    rpc HandlePush (PushMessage) returns (MemberHandleResponse) {}
    rpc HandleResponse (ResponseMessage) returns (MemberHandleResponse) {}

    rpc NewMember (NewMemberRequest) returns (NewMemberResponse) {}
    rpc DelMember (DelMemberRequest) returns (DelMemberResponse) {}
    rpc SessionClosed(SessionClosedRequest) returns(SessionClosedResponse) {}
    rpc CloseSession(CloseSessionRequest) returns(CloseSessionResponse) {}

    rpc QueryStats (QueryStatsRequest) returns (QueryStatsResponse) {}
}